--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     "@emotion/styled": "^11.14.0",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
+    "isomorphic-dompurify": "^2.21.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5"
+    "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.3",
+    "react-router-dom": "^7.1.5",
+    "styled-components": "^6.1.15",
+    "sweetalert2": "^11.16.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
